--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  transition: 0.2s all;
 }
 
 :root{
@@ -21,9 +22,9 @@
 }
 
 body{
-  background: linear-gradient(to left,#78B5E3 ,#304848);
+  background: var(--grey-color);
   min-height: 100vh;
-  color: #fff;
+  color: var(--black-color);
   display: block;
   font-family: Open-sans;
 }
