--- a/src/componets/header/header.css
+++ b/src/componets/header/header.css
@@ -51,3 +51,61 @@ header nav a p{
   color: var(--golden-color);
   font-weight: lighter;
 }
+.btn-mobile{
+  position: relative;
+  display: none;
+}
+
+.btn-mobile button{
+  font-size: 40px;
+  border: none;
+  background: transparent;
+  color: var(--white-color);
+  padding: 3px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-mobile button:hover{
+  color: var(--golden-color);
+}
+
+.menu-mobile{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  background: var(--black-color);
+  top: 0;
+  right: -1000px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.4s all;
+}
+
+.menu-mobile span{
+  font-size: 30px;
+  color: var(--white-color);
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.menu-mobile a{
+  font-size: 20px;
+}
+
+.mShow{
+  right: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .btn-mobile{
+    display: flex;
+  }
+
+  .menu{
+    display: none;
+  }
+}
