--- a/src/componets/header/header.css
+++ b/src/componets/header/header.css
@@ -7,8 +7,8 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--black-color);
-  padding: 20px 30px;
+  background: var(--white-color);
+  padding: 20px 50px;
 }
 
 header nav{
@@ -17,7 +17,7 @@ header nav{
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
 }
 
 header nav a{
@@ -25,8 +25,8 @@ header nav a{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  color: var(--white-color);
+  align-items: center;
+  color: var(--black-color);
   font-weight: 400;
   transition: 0.4s all;
 }
@@ -44,11 +44,11 @@ header nav a h1{
   font-size: 19px;
   font-weight: 550;
 }
+
 header nav a p{
   position: relative;
   display: block;
   font-size: 13px;
-  color: var(--golden-color);
   font-weight: lighter;
 }
 .btn-mobile{
@@ -60,7 +60,7 @@ header nav a p{
   font-size: 40px;
   border: none;
   background: transparent;
-  color: var(--white-color);
+  color: var(--black-color);
   padding: 3px;
   border-radius: 4px;
   cursor: pointer;
@@ -75,7 +75,7 @@ header nav a p{
   width: 100%;
   height: 100%;
   max-width: 600px;
-  background: var(--black-color);
+  background: var(--white-color);
   top: 0;
   right: -1000px;
   display: flex;
@@ -85,7 +85,7 @@ header nav a p{
 
 .menu-mobile span{
   font-size: 30px;
-  color: var(--white-color);
+  color: var(--black-color);
   cursor: pointer;
   position: absolute;
   top: 20px;
@@ -101,6 +101,9 @@ header nav a p{
 }
 
 @media only screen and (max-width: 600px) {
+  header{
+    padding: 20px 30px;
+  }
   .btn-mobile{
     display: flex;
   }
