--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   --yellow-color: #EDC242;
   --black-color: #2B2A25;
   --grey-color: #e3e3e3;
+  --color-tittle: rgb(29, 24, 12);
 }
 
 @font-face {
