--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -1,12 +1,19 @@
+.categories{
+  width: 100%;
+  background: var(--grey-color);
+  overflow: hidden;
+  position: relative;
+}
+
 .swiper {
   width: 100%;
-  height: 100%;
+  height: 370px;
+  position: relative;
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
 
   /* Center slide text vertically */
   display: -webkit-box;
@@ -28,4 +35,122 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.swiper-button-prev:after{
+  background: var(--golden-color);
+  color: var(--black-color);
+  padding: 10px;
+}
+.swiper-button-next:after{
+  background: var(--golden-color);
+  color: var(--black-color);
+  padding: 10px;
+}
+
+.content{
+  position: relative;
+  width: 100%;
+  max-width: 1000px;
+  background: var(--white-color);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 6px;
+}
+
+.image{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  flex: 50%;
+}
+
+.image img{
+  width: 100%;
+  position: relative;
+  display: block;
+}
+
+
+.descriptions{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  flex: 50%;
+  padding: 17px;
+  gap: 10px;
+  text-align: left;
+}
+
+.descriptions h2{
+  font-size: 30px;
+  color: var(--color-tittle);
+  font-weight: 550;
+  text-transform: uppercase;
+}
+
+.descriptions small{
+  font-size: 15px;
+  color: var(--black-color);
+  font-weight: 500;
+}
+
+.descriptions p{
+  font-size: 17px;
+  color: var(--black-color);
+  font-weight: 500;
+}
+
+.descriptions nav{
+  padding: 7px 0px;
+}
+
+.descriptions a{
+  font-size: 17px;
+  color: var(--black-color);
+  font-weight: 500;
+  background: var(--golden-color);
+  padding: 7px;
+}
+
+.descriptions a:hover{
+  background: var(--yellow-color);
+}
+
+@media only screen and (max-width: 600px){
+  .swiper {
+    height: 100%;
+  }
+
+  .swiper-button-prev:after{
+    background: var(--golden-color);
+    color: var(--black-color);
+    font-size: 25px;
+    padding: 10px;
+  }
+
+  .swiper-button-next:after{
+    background: var(--golden-color);
+    font-size: 25px;
+    color: var(--black-color);
+    padding: 10px;
+  }
+
+  .content{
+    flex-wrap: wrap;
+  }
+
+  .image, .descriptions{
+    flex: 100%;
+  }
 }
