--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -1,9 +1,32 @@
 .categories{
   width: 100%;
+  min-height: 100vh;
   background: var(--grey-color);
   overflow: hidden;
   position: relative;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+  margin-top: 25px;
+}
+
+.hdr{
+  font-size: 60px;
+  width: 100%;
+  color: var(--black-color);
+  text-align: center;
+  font-weight: 500;
+}
+
+.dscpt{
+  font-size: 20px;
+  width: 100%;
+  color: var(--black-color);
+  text-align: center;
+  font-weight: 500;
+  font-style: italic;
 }
 
 .swiper {
@@ -15,6 +38,7 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
+  position: relative;
 
   /* Center slide text vertically */
   display: -webkit-box;
@@ -35,7 +59,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .swiper-button-prev:after{
@@ -128,7 +152,14 @@
   background: var(--yellow-color);
 }
 
-@media only screen and (max-width: 600px){
+.container-info{
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--golden-color);
+}
+
+@media only screen and (max-width: 750px){
   .swiper {
     height: 100%;
   }
@@ -154,7 +185,12 @@
   .image, .descriptions{
     flex: 100%;
   }
-  .categories{
-    padding: 10px;
+
+  .hdr{
+    font-size: 30px;
+  }
+
+  .dscpt{
+    font-size: 10px;
   }
 }
