--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 :root{
   --white-color: #fff;
-  --golden-color: #F1C912;
+  --defualt-color: #619fcc;
   --yellow-color: #EDC242;
   --black-color: #2B2A25;
   --grey-color: #e3e3e3;
