--- a/src/componets/page404/page404.css
+++ b/src/componets/page404/page404.css
@@ -1,7 +1,7 @@
 .error404{
   width: 100%;
   height: 100vh;
-  background: rgb(156, 4, 4);
+  background: rgb(206, 13, 13);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,30 +13,37 @@
   color: #fff;
   font-size: 70px;
   font-weight: 500;
-  animation: ani 2s infinite;
+  animation: ani 1s;
 }
 
 .error404 p{
   color: #fff;
   font-size: 20px;
   font-weight: 500;
-  animation: ani 3s infinite;
+  animation: ani 1s;
+}
+
+.error404 svg{
+  color: #fff;
+  font-size: 170px;
+  animation: ani 1s;
 }
 
 @keyframes ani {
   0%{
-    opacity: 100%;
-    transform: translate(0px);
+    opacity: 0%;
+    filter: blur(200px);
   }
   50%{
-    transform: translate(-5px);
+    opacity: 50%;
+    filter: blur(100px);
   }
   70%{
-    opacity: 50%;
-    transform: translate(5px);
+    opacity: 70%;
+    filter: blur(50px);
   }
   100%{
     opacity: 100%;
-    transform: translate(0px);
+    filter: blur(0);
   }
 }
