--- a/src/componets/header/header.css
+++ b/src/componets/header/header.css
@@ -1,4 +1,4 @@
-header{
+.header-navigation{
   width: 100%;
   position: absolute;
   top: 0;
@@ -12,7 +12,7 @@ header{
   box-shadow: 0 0 10px rgba(51, 51, 51, 0.213);
 }
 
-header nav{
+.header-navigation nav{
   position: relative;
   display: flex;
   flex-direction: row;
@@ -21,10 +21,11 @@ header nav{
   gap: 15px;
 }
 
-header nav a{
+.header-navigation nav a{
   position: relative;
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   color: var(--black-color);
@@ -33,17 +34,30 @@ header nav a{
   padding: 7px;
 }
 
-header nav a:hover{
-  color: var(--yellow-color);
-}
-
-header nav:nth-child(2) a:hover{
+.header-navigation nav:nth-child(2) a{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 2px;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
   color: var(--black-color);
-  background-color: var(--golden-color);
-  border-radius: 6px;
+  font-weight: 400;
+  transition: 0.4s all;
+  padding: 7px;
 }
 
-header nav a h1{
+.header-navigation nav a:hover{
+  color: var(--defualt-color);
+}
+
+.header-navigation nav:nth-child(2) a:hover{
+  color: var(--defualt-color);
+  border-radius: 1px;
+}
+
+.header-navigation nav a h1{
   position: relative;
   display: flex;
   justify-content: center;
@@ -53,18 +67,18 @@ header nav a h1{
   font-weight: 550;
 }
 
-header nav a p{
+.header-navigation nav a p{
   position: relative;
   display: block;
   font-size: 13px;
   font-weight: lighter;
 }
-.btn-mobile{
+.header-navigation .btn-mobile{
   position: relative;
   display: none;
 }
 
-.btn-mobile button{
+.header-navigation .btn-mobile button{
   font-size: 40px;
   border: none;
   background: transparent;
@@ -74,11 +88,11 @@ header nav a p{
   cursor: pointer;
 }
 
-.btn-mobile button:hover{
-  color: var(--golden-color);
+.header-navigation .btn-mobile button:hover{
+  color: var(--defualt-color);
 }
 
-.menu-mobile{
+.header-navigation .menu-mobile{
   position: fixed;
   width: 100%;
   height: 100%;
@@ -92,7 +106,7 @@ header nav a p{
   z-index: 10000;
 }
 
-.menu-mobile span{
+.header-navigation .menu-mobile span{
   font-size: 30px;
   color: var(--black-color);
   cursor: pointer;
@@ -101,24 +115,24 @@ header nav a p{
   left: 20px;
 }
 
-.menu-mobile a{
+.header-navigation .menu-mobile a{
   font-size: 20px;
 }
 
-.mShow{
+.header-navigation .mShow{
   right: 0;
 }
 
 @media only screen and (max-width: 750px) {
-  header{
+  .header-navigation{
     padding: 20px 30px;
     position: relative;
   }
-  .btn-mobile{
+  .header-navigation .btn-mobile{
     display: flex;
   }
 
-  .menu{
+  .header-navigation .menu{
     display: none;
   }
 }
