--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -12,21 +12,44 @@
   margin-top: 25px;
 }
 
-.hdr{
-  font-size: 60px;
+.header-blocks{
   width: 100%;
-  color: var(--black-color);
-  text-align: center;
-  font-weight: 500;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
 }
 
-.dscpt{
-  font-size: 20px;
-  width: 100%;
+.header-blocks .hdr{
+  font-size: 30px;
   color: var(--black-color);
   text-align: center;
   font-weight: 500;
+  position: relative;
+  padding: 15px;
+}
+
+.header-blocks .dcpt{
+  font-size: 14px;
+  color: var(--black-color);
+  text-align: center;
+  font-weight: 500;
+  position: relative;
   font-style: italic;
+}
+
+.header-blocks .hdr::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: var(--defualt-color);
+  border-radius: 3px;
 }
 
 .swiper {
@@ -63,13 +86,13 @@
 }
 
 .swiper-button-prev:after{
-  background: var(--golden-color);
-  color: var(--black-color);
+  background: var(--defualt-color);
+  color: var(--white-color);
   padding: 10px;
 }
 .swiper-button-next:after{
-  background: var(--golden-color);
-  color: var(--black-color);
+  background: var(--defualt-color);
+  color: var(--white-color);
   padding: 10px;
 }
 
@@ -142,9 +165,9 @@
 
 .descriptions a{
   font-size: 17px;
-  color: var(--black-color);
+  color: var(--white-color);
   font-weight: 500;
-  background: var(--golden-color);
+  background: var(--defualt-color);
   padding: 7px;
 }
 
@@ -156,7 +179,8 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-color: var(--golden-color);
+  background-color: var(--grey-color);
+  padding: 20px;
 }
 
 @media only screen and (max-width: 750px){
