--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -1,6 +1,5 @@
 .categories{
   width: 100%;
-  min-height: 100vh;
   background: var(--grey-color);
   overflow: hidden;
   position: relative;
@@ -9,7 +8,7 @@
   justify-content: center;
   align-items: center;
   gap: 13px;
-  margin-top: 25px;
+  padding: 20px 0;
 }
 
 .header-blocks{
@@ -178,9 +177,93 @@
 .container-info{
   position: relative;
   width: 100%;
-  min-height: 100vh;
   background-color: var(--grey-color);
   padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 20px 30px;
+  overflow: hidden;
+  gap: 10px;
+}
+
+.card{
+  margin: 0 auto;
+  width: 270px;
+  height: 270px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--defualt-color);
+  overflow: hidden;
+  padding: 20px 0;
+  z-index: 10;
+  border-radius: 3px;
+  gap: 15px;
+  transition: 0.4s all;
+}
+.card::before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: var(--white-color);
+  transform: translateX(10px) translateY(-10px);
+  z-index: 0;
+  transition: 0.4s all;
+}
+
+.card:hover::before{
+  transform: translateX(0) translateY(0);
+}
+
+.card:hover{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.card .icon{
+  color: var(--defualt-color);
+  z-index: 10;
+  border: 1px solid var(--defualt-color);
+  border-radius: 10px 20px;
+  padding: 15px;
+  overflow: hidden;
+  background: var(--white-color);
+}
+
+.card .icon svg{
+  width: 60px;
+  height: 60px;
+}
+
+.card .content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  padding: 0 20px;
+  gap: 10px;
+}
+
+.card .content h2{
+  font-size: 21px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.card .content p{
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+}
+
+@media only screen and (max-width: 850px){
+  .container-info{
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media only screen and (max-width: 750px){
@@ -216,5 +299,15 @@
 
   .dscpt{
     font-size: 10px;
+  }
+
+  .container-info{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (max-width: 460px){
+  .container-info{
+    grid-template-columns: 1fr;
   }
 }
