--- a/src/componets/header/header.css
+++ b/src/componets/header/header.css
@@ -1,15 +1,13 @@
 .header-navigation{
   width: 100%;
   position: relative;
-  top: 0;
-  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: linear-gradient(to right,#fff, #d7d7d7);
-  padding: 10px 50px;
+  background: var(--white-color);
+  padding: 15px 50px;
   z-index: 1000;
-  box-shadow: 0 0 10px rgba(51, 51, 51, 0.213);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.229);
 }
 
 .header-navigation nav{
@@ -29,7 +27,7 @@
   justify-content: center;
   align-items: center;
   color: var(--black-color);
-  font-weight: 400;
+  font-weight: bold;
   transition: 0.4s all;
   padding: 7px;
 }
@@ -43,13 +41,23 @@
   justify-content: center;
   align-items: center;
   color: var(--black-color);
-  font-weight: 400;
+  font-weight: 550;
   transition: 0.4s all;
   padding: 7px;
+  font-size: 17px;
+}
+
+.header-navigation nav:nth-child(2) a svg{
+  font-size: 19px;
+  font-weight: 500;
+}
+
+.header-navigation nav:nth-child(4) a{
+  color: var(--black-color);
 }
 
 .header-navigation nav a:hover{
-  color: var(--defualt-color);
+  color: var(--yellow-color);
 }
 
 .header-navigation nav:nth-child(2) a:hover{
@@ -64,7 +72,7 @@
   align-items: center;
   gap: 3px;
   font-size: 19px;
-  font-weight: 550;
+  font-weight: bold;
 }
 
 .header-navigation nav a p{
@@ -121,6 +129,16 @@
 
 .header-navigation .mShow{
   right: 0;
+}
+
+.link-important{
+  background-color: var(--yellow-color);
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(51, 51, 51, 0.152);
+}
+
+.link-important:hover{
+  background-color: var(--grey-color);
 }
 
 @media only screen and (max-width: 750px) {
