--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@
 }
 
 :root{
-  --bg-color: #1f0a53;
+  --bg-color: #011F26;
   --white-color: #fff;
-  --defualt-color: #619fcc;
-  --yellow-color: #EDC242;
+  --default-color: #025E73;
+  --yellow-color: #F2A71B;
   --black-color: #2B2A25;
   --grey-color: #e3e3e3;
   --color-tittle: rgb(29, 24, 12);
