--- a/src/componets/home/home.css
+++ b/src/componets/home/home.css
@@ -1,15 +1,15 @@
 .all-content{
-  background: var(--bg-color) url(/src/assets/img/bg-header.png);
+  background: var(--bg-color) url(/src/assets/img/bg-header.jpg);
   background-color: var(--bg-color);
   background-position: top;
   background-repeat: no-repeat;
   background-size: contain;
   background-attachment: scroll;
-  /* box-shadow: inset 0 0 100px rgb(0, 0, 0); */
+  box-shadow: inset 0 1000px 0 rgba(0, 0, 0, 0.4);
 }
 .categories{
   width: 100%;
-  min-height: 90vh;
+  min-height: 100vh;
   overflow: hidden;
   position: relative;
   display: flex;
@@ -20,7 +20,6 @@
 }
 
 .header-blocks{
-  width: 100%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -28,19 +27,21 @@
   flex-direction: column;
   padding: 10px;
   gap: 10px;
+  overflow: hidden;
 }
 
 .header-blocks .hdr{
-  font-size: 27px;
+  font-size: 36px;
   color: var(--white-color);
   text-align: center;
   font-weight: bold;
   position: relative;
   padding: 15px;
+  z-index: 10;
 }
 
 .header-blocks .dcpt{
-  font-size: 14px;
+  font-size: 13px;
   color: var(--white-color);
   text-align: center;
   font-weight: 500;
@@ -55,7 +56,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background: var(--defualt-color);
+  background: var(--yellow-color);
   border-radius: 3px;
 }
 
@@ -127,15 +128,13 @@
   justify-content: center;
   align-items: center;
   flex: 50%;
-  padding: 10px;
-  background-color: var(--defualt-color);
+  background-color: var(--default-color);
 }
 
 .image img{
   width: 100%;
   position: relative;
   display: block;
-  border-radius: 10px;
 }
 
 
@@ -154,8 +153,8 @@
 
 .descriptions h2{
   font-size: 30px;
-  color: var(--defualt-color);
-  font-weight: 550;
+  color: var(--default-color);
+  font-weight: bold;
   text-transform: uppercase;
 }
 
@@ -179,7 +178,7 @@
   font-size: 17px;
   color: var(--white-color);
   font-weight: 500;
-  background: var(--defualt-color);
+  background: var(--default-color);
   padding: 7px;
 }
 
@@ -206,7 +205,6 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  padding: 20px 30px;
   overflow: hidden;
   gap: 10px;
 }
@@ -220,7 +218,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: var(--defualt-color);
+  background: var(--default-color);
   overflow: hidden;
   padding: 20px 0;
   z-index: 10;
@@ -248,9 +246,9 @@
 }
 
 .card .icon{
-  color: var(--defualt-color);
+  color: var(--default-color);
   z-index: 10;
-  border: 1px solid var(--defualt-color);
+  border: 1px solid var(--default-color);
   border-radius: 10px 20px;
   padding: 15px;
   overflow: hidden;
