--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
 }
 
 :root{
-  --bg-color: #011F26;
+  --bg-color: #13293D;
   --white-color: #fff;
-  --default-color: #025E73;
-  --yellow-color: #F2A71B;
+  --default-color: #006494;
+  --yellow-color: #fabe28;
   --black-color: #2B2A25;
   --grey-color: #e3e3e3;
   --color-tittle: rgb(29, 24, 12);
